# ramsh

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.github.fushinari.Ramesh.Devel.json  com.github.fushinari.Ramesh.json  com.github.fushinari.Ramsh.json
data/: com.github.fushinari.Ramesh.desktop.in.in  com.github.fushinari.Ramesh.gschema.xml.in  com.github.fushinari.Ramesh.metainfo.xml.in.in  com.github.fushinari.Ramsh.desktop.in.in  com.github.fushinari.Ramsh.gschema.xml.in  com.github.fushinari.Ramsh.metainfo.xml.in.in  meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: window.blp  window.ui
po/: POTFILES.in
src/: application.rs  config.rs.in  main.rs  window.rs
