[package]
name = "ramesh"
version = "0.1.0"
authors = ["Mufeed Ali <fushinari@protonmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.9"
gtk = { version = "0.4", package = "gtk4" }
adw = { version = "0.1.1", package = "libadwaita" }
