[package]
name = "ramesh"
version = "0.1.0"
authors = ["Mufeed Ali <fushinari@protonmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.9"
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4" }
adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita", features = ["v1_2"] }
hmac-sha1 = "0.1.3"
hex = "0.4.3"
rustc-serialize = "0.3.24"
bstr = "0.2.17"
fastpbkdf2 = "0.1.0"
rayon = "1.5.1"
indicatif = "0.16.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[profile.release]
lto = true
